# FAST-OAD-RTA

./: .gitattributes  CHANGELOG.rst  pyproject.toml
.github/workflows/: build_release.yml  test.yml  watchman_tests.yml
src/rta/models/: variable_descriptions.txt
src/rta/models/aerodynamics/components/tests/data/: ref_aerodynamics.xml
src/rta/models/geometry/geom_components/fuselage/: compute_fuselage.py
src/rta/models/geometry/geom_components/nacelle/: compute_nacelle.py
src/rta/models/geometry/geom_components/tests/: test_components.py
src/rta/models/loops/: compute_engine_size.py
src/rta/models/loops/tests/: test_engine_sizing.py
src/rta/models/propulsion/fuel_engine/turboprop_engine/: ml_tp_l1.py  openmdao.py
src/rta/models/propulsion/fuel_engine/turboprop_engine/engine_components/: propeller.py
src/rta/models/propulsion/fuel_engine/turboprop_engine/tests/: test_ml_tp_l1.py
src/rta/models/propulsion/fuel_engine/turboprop_engine/tests/data/: problem_outputs.xml
src/rta/models/weight/cg/tests/data/: ref_cg.xml
src/rta/models/weight/mass_breakdown/a_airframe/: a1_wing_weight.py  sum.py
src/rta/models/weight/mass_breakdown/b_propulsion/: turboprop_weight.py
src/rta/models/weight/mass_breakdown/tests/: test_mass_breakdown.py
src/rta/models/weight/mass_breakdown/tests/data/: ref_weight.xml
src/rta/notebooks/data/: problem_outputs.xml
src/rta/source_data_files/: problem_inputs_rta.xml
tests/: test_rta_baseline_integration.py
tests/data/: oad_process.yml  problem_outputs.xml
