# Project metadata (PEP 621) ===============================================
[project]
name = "RTA"
description = "Conceptual aircraft design platform for conventional 80 seat aircraft"
readme = "README.md"
license = "GPL-3.0-only"
keywords = [
    "aircraft",
    "design",
    "multi-disciplinary",
    "Regional Turboprop Aircraft"
]
authors = [
    {name = "Vincenzo PALLADINO"},
    {name = "Eric Nguyen Van", email = "eric.nguyen_van@onera.fr"}
]
maintainers = [
    { name = "Florent LUTZ", email = "Florent.LUTZ2@isae-supaero.fr" },
    { name = "Eric NGUYEN VAN", email = "Eric.Nguyen_Van@onera.fr" },
    { name = "Enrico STRAGIOTTI", email = "enrico.stragiotti@onera.fr" },
]
requires-python = ">=3.10,<3.15"
dynamic = ["version", "classifiers"] # Needed to use poetry-dynamic-versioning

# User dependencies ------------------------------------------------------------
dependencies = [
    "fast-oad-core>=1.9.0,<2",
    "fast-oad-cs25>=0.8.0,<0.9.0"
]

[project.urls]
homepage = "https://github.com/fast-aircraft-design/RTA"

# Entry points -----------------------------------------------------------------
[project.entry-points."fastoad.plugins"]
rta = "rta"


# Poetry settings ==============================================================
[tool.poetry]
requires-poetry = ">=2.0" # You should upgrade poetry to v2 using 'pipx upgrade poetry'
version = "0.1.0"  # This version number is overwritten by GitHub packaging workflow
packages = [
    { include = "rta", from = "src" },
]
exclude = ["**/tests/**"]

# Suitable classifiers based on python requirement and license are not automatically added if classifiers are statically defined in the project section
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics"
]

# Development dependencies -----------------------------------------------------
# Development dependencies using Poetry groups instead of [project.optional-dependencies]
[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"

[tool.poetry.group.test.dependencies]
pytest = "^9.0"
pytest-cov = "^7.0"
coverage = { version = "^7.0", extras = ["toml"] }
nbval = "^0.11"

[tool.poetry.group.lint.dependencies]
pre-commit = "^4.4.0"
nbstripout = "^0.6.0"
ruff = "0.15.1"


# Poetry plugins ==================================================
[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9" # Used for the poetry export hook in pre-commit


# Dynamic versioning settings ==================================================
# poetry-dynamic-versioning has to be installed in the same environment as
# Poetry (normally outside your project environment).
# see https://github.com/mtkennerly/poetry-dynamic-versioning#installation
[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"


# Packaging system =============================================================
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"


# Pytest settings ==============================================================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov-report term-missing --cov-report html --verbose"
testpaths = ["src"]
norecursedirs = ["dist", "build", ".tox", ".ipynb_checkpoints"]
filterwarnings = ["default"]


# Coverage settings ============================================================
[tool.coverage.run]
branch = true
source = ["rta"]
omit = ["*/test/*", "*/tests/*"]

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ = = .__main__.:"
]


# Ruff settings ================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
extend-include = ["*.ipynb"]
exclude = ["tests/dummy_plugins/"]

[tool.ruff.lint]
# Enable Pyflakes `F`) and a subset of the pycodestyle `E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings `W`) or
# McCabe complexity `C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"